2003-03-24  Andreas Kupries  <andreask@activestate.com>

	* fileutil.test:
	* fileutil.man:
	* fileutil.tcl: Fixed bug #707009, reported by Helmut Giese
	  <hgiese@users.sourceforge.net>, also updated the documentation
	  and the testsuite.

2003-01-28  David N. Welton  <davidw@dedasys.com>

	* fileutil.tcl (::fileutil::fileType): Use 'string match' instead
	  of regexp.  Require Tcl 8.2.

2003-01-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.man: More semantic markup, less visual one.

2002-10-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.tcl:
	* fileutil.man:
	* fileutil.test: Accepted enhanced format detection by Philip
	  Ehrens <pehrens@ligo.caltech.edu>.

2002-05-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.tcl (cat): Fixed bug #556504, reported by Michael
	  A. Cleverly <cleverly@users.sourceforge.net>. The fix was
	  provided by Michael too. The problem was reading files which are
	  reported as size 0, but actually have content, just dynamically
	  generated (Linux /proc is an example of an fs containing such
	  files).

2002-05-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.man: Documented the two new commands (stripN,
	  stripPwd).

	* fileutil.tcl: Made up my mind about SF Bug #462015. The proposed
	  interface change to [find] is rejected to keep the interface of
	  the library procedure simple and without hidden surprises =
	  KISS. Added a command [stripPwd] instead which can be used by
	  the caller of [find] to make the returned paths relative to the
	  current working directory. Also added [stripN] to strip a fixed
	  number of elements from the beginning of a path.

2002-04-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.man: Added doctools manpage.
	* fileutils.n: Updated to reflect change of version.

2002-03-20  eric melski  <ericm@ajubasolutions.com>

	* Bumped version to 1.4
	
	* fileutil.n: